[issue:1754] integrated pmd plugin and first version of cismet ruleset, additionally fixed some code flaws and removed dead code